[project]
name = "backend"
version = "0.1.0"
description = "AI-powered agent that automatically researches historical figures and creates structured biographical timelines from web sources"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.7",
    "langgraph-cli",
    "langchain-openai>=0.3.33",
    "langchain-tavily>=0.2.11",
    "tiktoken>=0.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "langfuse>=3.5.2",
    "aiohttp>=3.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
src = ["src"]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["src/test"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-v -m 'not llm'"
markers = [
    "llm: marks tests that make real LLM API calls"
]

[tool.setuptools.packages.find]
where = ["src"]  

